--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "dotenv": "^8.2.0",
-    "google-spreadsheet": "^3.0.13",
     "disqus-react": "^1.0.10",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.23.0",
+    "google-spreadsheet": "^3.0.13",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.11",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
