--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.11",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "vercel": "^20.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
